--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
     padding:0;
     box-sizing:border-box;
 }
+
 body{
     font-family:'Roboto',sans-serif;
     background:#EEE5D3;
     padding:20px;
     font-weight:bold;
 }
+
+/* ===== CONTAINER ===== */
 .container{
     max-width:100%;
     background:#F5F1DC;
@@ -27,12 +30,17 @@ body{
     padding:30px;
     box-shadow:0 20px 40px rgba(0,0,0,.1);
 }
+
+/* ===== HEADER ===== */
 .header h1{
-    font-size:2.9rem;
+    font-size:clamp(1.8rem,4vw,2.9rem);
 }
 .header h5{
+    font-size:clamp(1rem,2.5vw,1.4rem);
     color:#7f8c8d;
 }
+
+/* ===== LAYOUT ===== */
 .dashboard{
     display:grid;
     gap:25px;
@@ -50,6 +58,10 @@ body{
     height:300px;
     position:relative;
 }
+.level-container h3{
+    font-size:clamp(1.3rem,3vw,1.7rem);
+}
+
 .water-level{
     position:absolute;
     bottom:0;
@@ -66,13 +78,13 @@ body{
     border-radius:15px 15px 0 0;
 }
 
-/* 🔧 FIX #2 : percentage RESPONSIVE */
+/* ===== PERCENTAGE (RESPONSIVE) ===== */
 .percentage{
     position:absolute;
     top:10px;
     left:50%;
     transform:translateX(-50%);
-    font-size:30px;
+    font-size:clamp(1.2rem,4vw,1.9rem);
 }
 
 /* ===== BUBUK ===== */
@@ -88,6 +100,10 @@ body{
     height:300px;
     position:relative;
 }
+.bubuk-container h4{
+    font-size:clamp(1.2rem,3vw,1.7rem);
+}
+
 .bubuk-level{
     position:absolute;
     bottom:0;
@@ -108,6 +124,8 @@ body{
     grid-template-columns:1fr 1fr;
     gap:25px;
 }
+
+/* ===== TEMPERATURE ===== */
 .temperature-circle{
     width:250px;
     height:250px;
@@ -119,8 +137,11 @@ body{
     position:relative;
     box-shadow:0 0 300px rgba(255,27,27,.62);
 }
+.temperature-circle h3{
+    font-size:clamp(1.2rem,3vw,1.7rem);
+}
 .temp-text{
-    font-size:1.7rem;
+    font-size:clamp(1.3rem,4vw,1.8rem);
     color:#c2185b;
 }
 
@@ -131,12 +152,15 @@ body{
     border-radius:12px;
     border:2px solid #4caf50;
 }
+.stat-box h4{
+    font-size:clamp(1.2rem,3vw,1.7rem);
+}
 .stat-value{
-    font-size:1.7rem;
+    font-size:clamp(1.3rem,4vw,1.8rem);
     margin-left:45px;
 }
 
-/* 🔧 FIX #3 : HAPUS MARGIN HARD-CODE BUTTON */
+/* ===== BUTTON ===== */
 .formAir button{
     float:none;
     margin:0;
@@ -146,7 +170,6 @@ body{
     top:10px;
     right:10px;
 }
-
 button{
     background:none;
     border:none;
@@ -163,9 +186,6 @@ button:hover{
     }
     .bubuk-section{
         grid-template-columns:1fr;
-    }
-    .header h1{
-        font-size:2rem;
     }
     .container{
         padding:20px;
@@ -186,16 +206,15 @@ button:hover{
     <div class="dashboard">
 
         <div class="top-section">
+
             <div class="level-container">
                 <div class="d-flex justify-content-between align-items-center">
                     <h3>Level Air</h3>
-
                     <form class="formAir">
                         <button type="button">
                             <i class="fa-solid fa-arrows-rotate" style="color:#2caa84;"></i>
                         </button>
                     </form>
-
                     <i class="fas fa-tint text-primary"></i>
                 </div>
 
@@ -213,6 +232,7 @@ button:hover{
                         <div class="percentage">70%</div>
                     </div>
                 </div>
+
                 <div class="bubuk-container">
                     <h4>Cappuccino</h4>
                     <div class="bubuk-level">
@@ -220,6 +240,7 @@ button:hover{
                         <div class="percentage">60%</div>
                     </div>
                 </div>
+
                 <div class="bubuk-container">
                     <h4>Latte</h4>
                     <div class="bubuk-level">
@@ -228,15 +249,30 @@ button:hover{
                     </div>
                 </div>
             </div>
+
         </div>
 
         <div class="bottom-section">
+
             <div class="temperature-circle">
+                <h3>Suhu Air</h3>
                 <div class="temp-text">75°C</div>
             </div>
 
             <div class="stat-box position-relative">
                 <form class="formGelas">
                     <button type="button">
+                        <i class="fa-solid fa-arrows-rotate" style="color:#2caa84;"></i>
+                    </button>
+                </form>
+                <h4>Gelas Tersedia</h4>
+                <div class="stat-value">120</div>
+            </div>
 
-                    
+        </div>
+
+    </div>
+</div>
+
+</body>
+</html>
