--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
             min-height: 100vh;
             padding: 20px;
             font-weight: bold;
-            background: #EEE5D3;
+             background: linear-gradient(to bottom, #1e3c72 0%, #2a5298 100%);
+            /* background: #EEE5D3; */
             /*#EEE5D3*/
         }
 
         .container {
+             background: linear-gradient(to bottom, #1e3c72 0%, #2a5298 100%);
             max-width:100%;
-            background:#F5F1DC;
+            /* background:#F5F1DC; */
             border-radius:20px;
             padding:30px;
             box-shadow:0 20px 40px rgba(0,0,0,.1);
@@ -81,7 +83,13 @@
         }
 
         .water-level {
-            border-radius: 0 0 40px 40px;
+            background: linear-gradient(to right, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.02));
+            border: 10px solid #34495e;
+            border-radius: 30px;
+            box-shadow: 
+                inset 0 0 20px rgba(0, 0, 0, 0.2),
+                0 25px 50px rgba(0, 0, 0, 0.5);
+            /* border-radius: 0 0 40px 40px; */
             /*max-height: 100%;*/
             /*top: 12%;*/
             width: 100%;
@@ -347,6 +355,7 @@
 
         .percentage {
             font-size:clamp(1.3rem,4vw,1.8rem);
+            color: white;
             position: absolute;
             top: 10px;
             left: 43%;
@@ -638,4 +647,5 @@
            
 </body>
 </html>
+
 
