--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             min-height: 100vh;
             padding: 20px;
             font-weight: bold;
-             background: linear-gradient(to bottom, #1e3c72 0%, #2a5298 100%);
-            /* background: #EEE5D3; */
+             /* background: linear-gradient(to bottom, #1e3c72 0%, #2a5298 100%); */
+            background: #EEE5D3;
             /*#EEE5D3*/
         }
 
         .container {
-             background: linear-gradient(to bottom, #1e3c72 0%, #2a5298 100%);
+             /* background: linear-gradient(to bottom, #1e3c72 0%, #2a5298 100%); */
             max-width:100%;
-            /* background:#F5F1DC; */
+            background:#F5F1DC;
             border-radius:20px;
             padding:30px;
             box-shadow:0 20px 40px rgba(0,0,0,.1);
@@ -648,6 +648,7 @@
            
 </body>
 </html>
+
 
 
 
