--- a/index.html
+++ b/index.html
@@ -149,13 +149,19 @@
 
         .bubuk-container {
             /*background: linear-gradient(145deg, #fff3e0, #ffe0b2);*/
-            border-radius: 15px;
-            padding: 20px;
+            background: linear-gradient(to right, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.02));
+            border: 10px solid #34495e;
+            border-radius: 30px;
+            box-shadow: 
+                inset 0 0 20px rgba(0, 0, 0, 0.2),
+                0 25px 50px rgba(0, 0, 0, 0.5);
+            /* border-radius: 15px;
             box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-            border: 2px solid #5a3905;
+            border: 2px solid #5a3905; */
             /*transition: transform 0.3s ease, box-shadow 0.3s ease;*/
             position: sticky;
             height: 300px;
+            padding: 20px;
         }
 
         /*.bubuk-container:hover {
@@ -648,6 +654,7 @@
            
 </body>
 </html>
+
 
 
 
