--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             height: 300px;
             background: linear-gradient(to right, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.02));
             border: 10px solid #34495e;
-            border-radius: 0px 30px;
+            border-radius: 0px 0px 30px 30px;
             box-shadow: 
                 inset 0 0 20px rgba(0, 0, 0, 0.2),
                 0 25px 50px rgba(0, 0, 0, 0.5);
@@ -654,6 +654,7 @@
            
 </body>
 </html>
+
 
 
 
